fixed shifting problem

--- a/css/style.css
+++ b/css/style.css
@@ -798,9 +798,6 @@ a {
 #xlSize {
   height: 40px; }
 
-#sauceList {
-  margin: 30px auto; }
-
 .dropdown-list {
   margin: 20px;
   position: relative;
